--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ footer div a:hover{
 
 @media(max-width:500px){
     header{
+        position: relative;
         justify-content: start;
         flex-direction: column;
         height: 60vh;
